error with connecting to postgres

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 port=3000
 mongo_uri=mongodb://localhost:27017/ts-express-crud
+
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASS=bobur0200
+DB_NAME=express-ts-auth
+JWT_SECRET=jwt-secret-key-bbb
